--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "101": "^0.7.3",
-    "page": "visionmedia/page.js#master"
+    "page": "visionmedia/page.js#master",
+    "dasherize": "^1.0.0"
   }
 }
