--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "vue-ui": "^0.1.3",
     "domready": "^1.0.7",
     "jade": "^1.8.1",
-    "jade-loader": "^0.7.0"
+    "jade-loader": "^0.7.0",
+    "qs": "^2.3.3"
   },
   "dependencies": {
     "101": "^0.7.3",
     "page": "visionmedia/page.js#master",
-    "dasherize": "^1.0.0"
+    "dasherize": "^1.0.0",
+    "qs": "^2.3.3"
   }
 }
