--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "101": "^0.7.3",
     "page": "visionmedia/page.js#master",
     "dasherize": "^1.0.0",
-    "qs": "^2.3.3"
+    "qs": "^2.3.3",
+    "lodash.isarray": "^2.4.1"
   }
 }
