--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "style-loader": "^0.8.1",
     "vue": "0.11.4",
     "webpack": "^1.4.10",
-    "vue-ui": "^0.1.3",
+    "vueui-transitions": "0.1.x",
     "domready": "^1.0.7",
     "jade": "^1.8.1",
     "jade-loader": "^0.7.0",
