--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/vueui/vueui-router.git"
+    "url": "git://github.com/vueui/router.git"
   },
   "keywords": [
     "Vue.js",
@@ -16,9 +16,9 @@
   "author": "Agon Bina <agon_bina@hotmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vueui/vueui-router.git/issues"
+    "url": "https://github.com/vueui/router.git/issues"
   },
-  "homepage": "https://github.com/vueui/vueui-router",
+  "homepage": "https://github.com/vueui/router",
   "devDependencies": {
     "css-loader": "^0.9.0",
     "html-loader": "^0.2.3",
