--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "css-loader": "^0.9.0",
     "html-loader": "^0.2.3",
     "style-loader": "^0.8.1",
-    "vue": "0.11.4",
+    "vue": "yyx990803/vue#dev",
     "webpack": "^1.4.10",
     "vueui-transitions": "0.1.x",
     "domready": "^1.0.7",
     "jade": "^1.8.1",
-    "jade-loader": "^0.7.0",
-    "qs": "^2.3.3"
+    "jade-loader": "^0.7.0"
   },
   "dependencies": {
     "101": "^0.7.3",
